examples/test/testpolicy3822.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3822
  namespace: namespace340
spec:
  podSelector:
    matchLabels:
      key35: value49
      key40: value26
      key4: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value34
          key18: value42
      podSelector:
        matchLabels:
          key39: value32
